[package]
name = "capstone-sys"
version = "0.6.0"
authors = ["m4b <m4b.github.io@gmail.com>", "tmfink <tmfinken@gmail.com>"]
description = "System bindings to the capstone disassembly library"
build = "build.rs"
keywords = ["disassemble"]
categories = ["external-ffi-bindings"]
links = "capstone"
license = "MIT"
readme = "README.md"
repository = "https://github.com/capstone-rust/capstone-sys"

[badges]
travis-ci = { repository = "capstone-rust/capstone-sys" }


[dependencies]

[build-dependencies]
bindgen = { optional = true, version = "0.31" }
pkg-config = { optional = true, version = "0.3" }
cmake = {optional = true, version = "0.1.28"}

[features]
# use bundled capstone by default instead of the system capstone
# use pre-generated bindings instead of dynamically with bindgen
default = []

use_system_capstone = ["pkg-config"]
build_capstone_cmake = ["cmake"]
use_bindgen = ["bindgen"]  # Dynamically generate bindings with bindgen
