[package]
authors = ["m4b <m4b.github.io@gmail.com>",
           "Richo Healey <richo@psych0tik.net>",
           "Travis Finkenauer <tmfinken@gmail.com>"]
description = "High level bindings to capstone disassembly engine (http://capstone-engine.org/)"
keywords = ["disassemble"]
license = "MIT"
name = "capstone"
repository = "https://github.com/capstone-rust/capstone-rs"
readme = "README.md"
version = "0.3.0"

[badges]
travis-ci = { repository = "capstone-rust/capstone-rs" }

[dependencies]
capstone-sys = "0.7.0"

# Not actually a dependency, but this makes the more complicated examples work
[dev-dependencies]
macho = "0.*"

[features]
default = []

use_system_capstone = ["capstone-sys/use_system_capstone"]
build_capstone_cmake = ["capstone-sys/build_capstone_cmake"]
build_capstone_cc = ["capstone-sys/build_capstone_cc"]
use_bindgen = ["capstone-sys/use_bindgen"]
