[package]
name = "capstone-sys"
version = "0.15.0"
authors = ["m4b <m4b.github.io@gmail.com>", "tmfink <tmfinken@gmail.com>"]
description = "System bindings to the capstone disassembly library"
build = "build.rs"
keywords = ["disassemble"]
categories = ["external-ffi-bindings"]
links = "capstone"
license = "MIT"
readme = "README.md"
repository = "https://github.com/capstone-rust/capstone-rs/tree/master/capstone-sys"
edition = "2018"

exclude = [
    "/capstone/docs/**",
    "/capstone/msvc/**",
    "/capstone/xcode/**",
]

[badges]
travis-ci = { repository = "capstone-rust/capstone-sys" }


[dependencies]
libc = { version = "0.2.59", default-features = false }

[build-dependencies]
bindgen = { optional = true, version = "0.59.1" }
regex = { optional = true, version = "1.3.1" }
cc = "1.0"

[features]
# use pre-generated bindings instead of dynamically with bindgen
default = []

use_bindgen = ["bindgen", "regex"]  # Dynamically generate bindings with bindgen
