[package]
name = "capstone-sys"
version = "0.16.0"
authors = ["m4b <m4b.github.io@gmail.com>", "tmfink <tmfinken@gmail.com>"]
description = "System bindings to the capstone disassembly library"
build = "build.rs"
keywords = ["disassemble"]
categories = ["external-ffi-bindings"]
links = "capstone"
license = "MIT"
readme = "README.md"
repository = "https://github.com/capstone-rust/capstone-rs/tree/master/capstone-sys"
edition = "2018"
rust-version.workspace = true

exclude = [
    "/capstone/docs/**",
    "/capstone/msvc/**",
    "/capstone/xcode/**",
]

[badges]
travis-ci = { repository = "capstone-rust/capstone-sys" }


[dependencies]
libc = { version = "0.2.59", default-features = false }

[build-dependencies]
bindgen = { optional = true, version = "0.69.0" }
regex = { optional = true, version = "1.10.4" }
cc = "1.0"

[features]
default = ["full"]
full = []
# use pre-generated bindings instead of dynamically with bindgen
use_bindgen = ["bindgen", "regex"]  # Dynamically generate bindings with bindgen
