[package]
name = "capstone-sys"
version = "0.17.0"
authors = ["m4b <m4b.github.io@gmail.com>", "tmfink <tmfinken@gmail.com>"]
description = "System bindings to the capstone disassembly library"
build = "build.rs"
keywords = ["disassemble"]
categories = ["external-ffi-bindings"]
links = "capstone"
license = "MIT"
readme = "README.md"
repository = "https://github.com/capstone-rust/capstone-rs/tree/master/capstone-sys"
edition = "2018"
rust-version.workspace = true

exclude = [
    "/capstone/docs/**",
    "/capstone/msvc/**",
    "/capstone/xcode/**",
]

[badges]
travis-ci = { repository = "capstone-rust/capstone-sys" }


[dependencies]
libc = { version = "0.2.59", default-features = false }

[build-dependencies]
bindgen = { optional = true, version = "0.69.0" }
regex = { optional = true, version = "1.10.4" }
cc = "1.0"

[features]
default = ["full", "support_all_archs"]
full = []
# use pre-generated bindings instead of dynamically with bindgen
use_bindgen = ["bindgen", "regex"]  # Dynamically generate bindings with bindgen
# arch specific features to reduce binary size
support_all_archs = [
    "arch_arm",
    "arch_arm64",
    "arch_bpf",
    "arch_evm",
    "arch_m680x",
    "arch_m68k",
    "arch_mips",
    "arch_mos65xx",
    "arch_powerpc",
    "arch_riscv",
    "arch_sh",
    "arch_sparc",
    "arch_sysz",
    "arch_tms320c64x",
    "arch_tricore",
    "arch_wasm",
    "arch_x86",
    "arch_xcore",
]
arch_arm = []
arch_arm64 = []
arch_bpf = []
arch_evm = []
arch_m680x = []
arch_m68k = []
arch_mips = []
arch_mos65xx = []
arch_powerpc = []
arch_riscv = []
arch_sh = []
arch_sparc = []
arch_sysz = []
arch_tms320c64x = []
arch_tricore = []
arch_wasm = []
arch_x86 = []
arch_xcore = []
