[package]
name = "cstool"
version = "0.1.0"
authors = ["Travis Finkenauer <tmfinken@gmail.com>"]
license = "MIT"
edition = "2018"

[dependencies]
capstone = { path = "../capstone-rs", version = "0.11.0" }
log = "0.4"
stderrlog = "0.5"

[dependencies.clap]
version = "2.32"
default-features = false
features = []

[features]
default = ["full"]
full = ["capstone/full"]
