[package]
name = "cstool"
version = "0.1.0"
authors = ["Travis Finkenauer <tmfinken@gmail.com>"]
license = "MIT"
edition = "2018"

[dependencies]
capstone = { path = "../capstone-rs", version = "0.13.0" }
log = "0.4"
stderrlog = "0.6"

[dependencies.clap]
version = "4.4.*"
default-features = false
features = ["error-context", "help", "std", "string", "usage"]

[features]
default = ["full"]
full = ["capstone/full"]
